# atomea

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .ignore  .isort.cfg  .pytest.ini  CODEOWNERS  LICENSE.md  Makefile  README.md  conda-lock.yml  environment.yml  mkdocs.yml  pixi.toml  pyproject.toml  qodana.yaml
.github/workflows/: codecov.yml  docs.yml  stale.yml  tests.yml
atomea/: __init__.py  schema.py  utils.py
atomea/containers/: __init__.py  core.py  energy.py  project.py  quantum.py
atomea/containers/atomistic/: __init__.py  bonds.py  energy.py  microstate.py  quantum.py  time.py  topology.py
atomea/containers/ensemble/: __init__.py  core.py
atomea/containers/time/: __init__.py  core.py  interval.py
atomea/data/: __init__.py  accessors.py  core.py  meta.py  types.py
atomea/data/accessors/: __init__.py  _array.py  _table.py  core.py
atomea/data/digesters/: mdanalysis.py
atomea/digesters/: __init__.py  core.py  digester.py  ids.py  mdanalysis.py  uuids.py
atomea/digesters/amber/: __init__.py  digester.py
atomea/digesters/text/: __init__.py  chunk.py  parser.py  pattern.py  scanner.py  task.py  transition.py
atomea/helpers/: __init__.py  bonding.py  chunking.py
atomea/io/: __init__.py  disk.py  manager.py  mdanalysis.py  reader.py  writer.py
atomea/io/amber/: reader.py
atomea/io/backends/: _parquet.py  _zarr.py  utils.py
atomea/io/formats/: __init__.py
atomea/io/text/: __init__.py  parser.py  scanner.py  transition.py
atomea/project/: __init__.py  core.py
atomea/project/atomistic/: energy.py  topology.py
atomea/project/ensemble/: core.py
atomea/schemas/: __init__.py  data.py  id.py  identification.yml  io.py  main.py  project.py  qm.yml  render.py  schema.py  slurm.py  system.py  system.yml  topology.yml
atomea/schemas/atomistic/: __init__.py  energy.py  ensemble.py  microstate.py  molecule.py  qc.py  quantum.py  system.py  time.py  topology.py
atomea/schemas/ensemble/: core.py
atomea/schemas/field/: __init__.py  core.py  meta.py
atomea/schemas/simulation/: __init__.py  amber.py  sim.py
atomea/schemas/westpa/: cli.py
atomea/schemas/workflow/: __init__.py  ff.py  run.py  slurm.py  solution.py  topo.py
atomea/schemas/yaml/: identification.yml  qm.yml
atomea/selection/: __init__.py
atomea/selection/expressions/: __init__.py  atoms.py  coords.py  core.py  ids.py  mols.py  ops.py
atomea/selection/selector/: __init__.py  core.py
atomea/stores/: __init__.py  core.py  kind.py
atomea/stores/arrays/: __init__.py  _numpy.py  _zarr.py  core.py
atomea/stores/interfaces/: __init__.py  _array.py  _table.py  core.py
atomea/stores/tables/: __init__.py  (+2 more)
atomea/typing/: __init__.py  _array.py  _dataframe.py  _generic.py  passable.py
docker/: Dockerfile-env
docs/: .nav.yml  .pages  copy_schemas.py  gen_ref_pages.py
docs/concepts/: .nav.yml  .pages
docs/containers/: index.md  uuids.md
docs/css/: colors.css
docs/data/: index.md
docs/digesters/: index.md
docs/examples/: .nav.yml  .pages
docs/io/: index.md
docs/js/: d3.js
docs/schemas/: .nav.yml  index.md
docs/selections/: index.md
docs/stores/: index.md
tests/: __init__.py  conftest.py  data_validator.py  synthetic_data.py  test_amber.py  test_digest_amber.py  test_render_amber.py  test_render_slurm.py  test_synthetic_data.py
tests/fixtures/: __init__.py  amber_v22.py
tests/selection/: test_selectors.py
tests/tasks/: test_box_dim.py  test_center_origin.py  test_geom_center.py
(+155 files in other folders)
