[project]
name = "atomea"
description = "A hierarchical data model for atomistic systems"
authors = [
    {name = "Scientific Computing Studio", email = "us@scient.ing"}
]
maintainers = [
    {name = "Alex M. Maldonado", email = "alex@scient.ing"}
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "loguru>=0.7.2,<1",
    "numpy>=1.2.6,<3",
    "pydantic>=2.10.6,<3",
    "pyyaml>=6.0.2,<7",
    "zarr>=3.0.0,<4",
    "polars>=1.10.0,<2",
]

[project.urls]
Documentation = "https://atomea.scient.ing"
Repository = "https://github.com/scienting/atomea"
Issues = "https://github.com/scienting/atomea/issues"
Changelog = "https://github.com/scienting/atomea/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["atomea*"]

[tool.setuptools_scm]
write_to = "atomea/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
